--- a/index.html
+++ b/index.html
@@ -1,23 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>My Page Title</title>
+	<title>Neko Neighbor</title>
+	<!-- bootstrap -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
+	<!-- fonts & styles -->
+	<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+	<!-- vue & anime.js -->
 	<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/animejs/lib/anime.iife.min.js"></script>
 </head>
-
 <body>
 	<div id="myApp">
-		<my-custom></my-custom>
+		<!-- top/header -->
+		<div id="top-bar" class="d-flex justify-content-between align-items-center p-3">
+			<h1 class="pixel-font">🐾 Neko Neighbor</h1>
+			<div>
+				<span class="me-3"><strong>Coins:</strong> 💰{{ user.coins }}</span>
+				<button class="btn btn-sm btn-success" @click="addNewCat">+ New Cat (50 coins)</button>
+			</div>
+		</div>
+
+		<!-- action panel for dragging items onto cats -->
+		<div id="action-panel" class="d-flex justify-content-center gap-4 py-2">
+			<img src="./neko_assets/Background/CatHouses/Food.png"
+			draggable="true"
+			@dragstart="setAction('feed')"
+			class="action-icon"
+			alt="Feed" />
+					<img src="./neko_assets/Background/CatHouses/BlueBall.gif" draggable="true" @dragstart="setAction('play')" class="action-icon" alt="Play">
+			<img src="./neko_assets/Background/CatHouses/FoodBowl.png" draggable="true" @dragstart="setAction('pet')" class="action-icon" alt="Pet">
+		</div>
+
+		<div class="d-flex justify-content-center">
+			<!-- background container-->
+			<div id="map-container">
+				<template v-for="(cat, index) in cats" :key="cat.id">
+					<div class="cat-drop-zone" :style="getCatStyle(cat, index)" @drop.prevent="handleDrop(cat)" @dragover.prevent>
+						<cat-sprite :cat="cat" :animation="catAnimation(cat)" />
+						<!--  accessories go w cat  -->
+						<img v-if="cat.status === 'eating'"
+						:style="getAccessoryStyle(cat)"
+						src="./neko_assets/Background/CatHouses/FoodBowl.png"
+						class="overlay-item"
+						alt="food bowl" />
+											<img v-if="cat.status === 'playing'" :style="getAccessoryStyle(cat)" src="./neko_assets/Background/CatHouses/BlueBall.gif" class="overlay-item" alt="yarn ball" />
+					</div>
+				</template>
+			</div>
+		</div>
 	</div>
-
-	<script src="script.js">
-	</script>
+	<script type="module" src="script.js"></script>
 </body>
-
 </html>
